--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,51 +1,132 @@
 //// LOGO ////
 .logo {
   height: 3.25rem;
+  margin-left: 2rem;
 }
 
 //// SEARCH ////
 .search {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 40%;
+          flex: 0 0 40%;
+
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 
   &__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-grey-light-2);
+    border-radius: 100px;
+    border: none;
+    width: 90%;
+    padding: .7rem 2rem;
+    -webkit-transition: all .3s;
+    transition: all .3s;
+    margin-right: -3.25rem;
 
+    &:focus {
+      width: 100%;
+      background-color: var(--color-grey-light-3);
+      outline: none;
+    }
+
+    &::input-placeholder {
+      color: var(--color-grey-light-4);
+      font-weight: 100;
+    }
+    &::-webkit-input-placeholder {
+      color: var(--color-grey-light-4);
+      font-weight: 100;
+    }
+    &::-ms-input-placeholder {
+      color: var(--color-grey-light-4);
+      font-weight: 100;
+    }
+  }
+
+  &__input:focus + &__button {
+    background-color: var(--color-grey-light-3);
   }
 
   &__button {
+    border: none;
+    background-color: var(--color-grey-light-2);
 
+    &:focus {
+      outline: none;
+    }
+
+    &:active {
+      -webkit-transform: translateY(2px);
+              transform: translateY(2px);
+    }
   }
 
   &__icon {
     height: 2rem;
     width: 2rem;
+    fill: var(--color-grey-dark-3);
   }
 }
 
 //// USER NAVIGATION ////
 .user-nav {
+  align-self: stretch;
+
+  display: flex;
+  align-items: center;
+
+  & > * { // all direct children of user-nav
+    height: 100%;
+    padding: 0 1.5rem;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+  }
+
+  & > *:hover {
+    background-color: var(--color-grey-light-2);
+  }
 
   &__icon-box {
-
+    position: relative;
   }
 
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-grey-dark-2);
   }
 
   &__notification {
+    background-color: var(--color-primary);
+    height: 1.75rem;
+    width: 1.75rem;
+    font-size: .8rem;
+    color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 1.6rem;
+    right: .5rem;
 
-  }
-
-  &__user {
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-  }
-
-  &__user-name {
-  
+    margin-right: 1rem;
   }
 }
