--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,14 +4,18 @@
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   
-
   min-height: 50rem;
 }
 
 .header {
+  font-size: 1.4rem;
   min-height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
@@ -25,6 +29,6 @@
 }
 
 .hotel-view {
-  background-color: #fff;
+  background-color: #ccc;
   flex-grow: 1;
 }
