--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -130,3 +130,72 @@
     margin-right: 1rem;
   }
 }
+
+//// SIDE NAVIGATION ////
+.side-nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3rem;
+
+  &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: .5rem;
+    }
+  }
+
+  &__item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: var(--color-primary);
+    transform: scaleY(0);
+    width: 3px;
+    transition: transform .2s, // zmień właściwość transform w czasie .2s
+                width .4s cubic-bezier(1,0,0,1) .2s, // zmień właściwość width w czasie .4s, z .2s opóźnieniem
+                background-color .1s;
+  }
+
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: var(--color-primary-light);
+  }
+
+  &__link:link,
+  &__link:visited {
+    text-decoration: none;
+    color: var(--color-grey-light-1);
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    z-index: 10; // właściwość ta działa tylko w przypadku występowania właściwości position
+    position: relative;
+
+    display: flex;
+    align-items: center;
+  }
+
+  &__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+    color: var(--color-grey-light-1);
+    margin-right: 2rem;
+    fill: currentColor;
+  }
+}
+
+//// LEGAL TEXT ////
+.legal {
+  font-size: 1.2rem;
+  padding: 2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+}
