--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,10 +22,16 @@
   display: flex;
 }
 
-.side-bar {
+.sidebar {
   background-color: var(--color-grey-dark-1);
-
   flex: 0 0 18%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  //test
+  height: 80rem;
 }
 
 .hotel-view {
