--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,83 @@ body {
   color: var(--color-grey-light-4);
   text-align: center; }
 
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--color-grey-light-2);
+  background-color: #fff; }
+  .overview__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
+    text-transform: uppercase; }
+  .overview__stars {
+    margin-right: auto;
+    display: flex; }
+  .overview__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+    fill: var(--color-primary); }
+  .overview__icon--location-pin {
+    margin-right: .3rem; }
+  .overview__location {
+    font-size: 1.2rem;
+    display: flex; }
+  .overview__rating {
+    background-color: var(--color-primary);
+    color: #fff;
+    margin-left: 2rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
+  .overview__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300; }
+  .overview__rating-count {
+    font-size: .8rem;
+    text-transform: uppercase; }
+
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  border-bottom: 1px solid currentColor;
+  background-color: transparent;
+  outline: none;
+  padding-bottom: 2px;
+  font-size: inherit;
+  cursor: pointer;
+  transition: all .2s;
+  display: inline-block;
+  /*&:hover {
+    color: var(--color-grey-dark-1);
+  }*/
+  /*&:focus {
+    outline: none;
+    animation: pulse 1s infinite;
+    backface-visibility: hidden;
+  }*/ }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -184,7 +261,7 @@ body {
   font-size: 1.4rem;
   min-height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
   align-items: center; }
