--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -199,3 +199,117 @@
   color: var(--color-grey-light-4);
   text-align: center;
 }
+
+//// GALLERY ////
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
+
+//// GALLERY ////
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--color-grey-light-2);
+  background-color: #fff;
+
+  &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
+    text-transform: uppercase;
+  }
+
+  &__stars {
+    //flex: 1; złe rozwiązanie ze względu na to, że element będzie zajmował całą dostępną szerokość
+    margin-right: auto;
+    display: flex;
+  }
+
+  &__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__icon--location-pin {
+    margin-right: .3rem;
+  }
+
+  &__location {
+    font-size: 1.2rem;
+    display: flex;
+  }
+
+  &__rating {
+    background-color: var(--color-primary);
+    color: #fff;
+    margin-left: 2rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  &__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+
+  }
+
+  &__rating-count {
+    font-size: .8rem;
+    text-transform: uppercase;
+  }
+
+}
+
+//// BUTTONS ////
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  border-bottom: 1px solid currentColor;
+  background-color: transparent;
+  outline: none;
+  padding-bottom: 2px;
+  font-size: inherit;
+  cursor: pointer;
+  transition: all .2s;
+  display: inline-block;
+  //backface-visibility: hidden;
+  /*&:hover {
+    color: var(--color-grey-dark-1);
+  }*/
+
+  /*&:focus {
+    outline: none;
+    animation: pulse 1s infinite;
+    backface-visibility: hidden;
+  }*/
+}
+
+//// ANIMATIONS ////
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+}
