--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3); }
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 1rem 5rem rgba(0, 0, 0, 0.06);
+  --line: 1px solid var(--color-grey-light-2); }
 
 * {
   margin: 0;
@@ -182,7 +184,7 @@ body {
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   background-color: #fff; }
   .overview__heading {
     font-size: 2.25rem;
@@ -250,6 +252,49 @@ body {
     transform: scale(1);
     box-shadow: none; } }
 
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem; }
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-bottom: var(--line);
+  border-top: var(--line);
+  display: flex;
+  flex-wrap: wrap; }
+  .list__item {
+    flex: 0 0 50%; }
+    .list__item:nth-child(-n+6) {
+      margin-bottom: 1rem; }
+    .list__item::before {
+      content: "";
+      display: inline-block;
+      height: 1rem;
+      width: 1rem;
+      margin-right: .5rem;
+      background-color: var(--color-primary);
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover; }
+
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center; }
+  .recommend__number {
+    margin-right: auto; }
+  .recommend__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff; }
+    .recommend__photo:not(:last-child) {
+      margin-right: -2rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -261,7 +306,7 @@ body {
   font-size: 1.4rem;
   min-height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center; }
@@ -274,9 +319,24 @@ body {
   flex: 0 0 18%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 80rem; }
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #ccc;
   flex-grow: 1; }
+
+.hotel-details {
+  display: flex;
+  background-color: var(--color-grey-light-1);
+  padding: 4.5rem;
+  border-bottom: var(--line); }
+  .hotel-details .hotel-description {
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    background-color: #fff;
+    font-size: 1.4rem;
+    padding: 3rem;
+    box-shadow: var(--shadow-light); }
+  .hotel-details .hotel-reviews {
+    flex: 1;
+    background-color: yellowgreen; }
