--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -214,7 +214,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   background-color: #fff;
 
   &__heading {
@@ -311,5 +311,74 @@
   100% {
     transform: scale(1);
     box-shadow: none;
+  }
+}
+
+//// PARAGRAPH ////
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+//// LIST ////
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-bottom: var(--line);
+  border-top: var(--line);
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 0 0 50%;
+
+    &:nth-child(-n+6) {
+      margin-bottom: 1rem;
+    }
+
+    &::before {
+      content: "";
+      display: inline-block;
+      height: 1rem;
+      width: 1rem;
+      margin-right: .5rem;
+
+      // Pierwsze rozwiązanie (głównie starsze przeglądarki)
+      //background-image: url(../img/chevron-thin-right.svg);
+      //background-size: cover;
+
+      // Drugi rozwiązanie to implementacja 8 SVG icons w strukturze HTML
+      
+      // Trzecie rozwiązanie to zastosowanie CSS'owych masek
+      background-color: var(--color-primary);
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+    }
+  }
+}
+
+//// RECOMMEND ////
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
+
+  &__number {
+    margin-right: auto;
+  }
+
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff;
+
+    &:not(:last-child) {
+      margin-right: -2rem;
+    }
   }
 }
