--- a/css/style.css
+++ b/css/style.css
@@ -221,37 +221,6 @@ body {
     font-size: .8rem;
     text-transform: uppercase; }
 
-.btn-inline {
-  border: none;
-  color: var(--color-primary);
-  border-bottom: 1px solid currentColor;
-  background-color: transparent;
-  outline: none;
-  padding-bottom: 2px;
-  font-size: inherit;
-  cursor: pointer;
-  transition: all .2s;
-  display: inline-block;
-  /*&:hover {
-    color: var(--color-grey-dark-1);
-  }*/
-  /*&:focus {
-    outline: none;
-    animation: pulse 1s infinite;
-    backface-visibility: hidden;
-  }*/ }
-
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-    box-shadow: none; }
-  50% {
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
-  100% {
-    transform: scale(1);
-    box-shadow: none; } }
-
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem; }
 
@@ -295,6 +264,121 @@ body {
     .recommend__photo:not(:last-child) {
       margin-right: -2rem; }
 
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3rem;
+  position: relative;
+  overflow: hidden; }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.5rem;
+    left: -1rem;
+    color: var(--color-grey-light-1);
+    font-size: 20rem;
+    font-family: sans-serif;
+    line-height: 1; }
+  .review__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 10; }
+  .review__user {
+    display: flex;
+    align-items: center; }
+  .review__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem; }
+  .review__user-box {
+    margin-right: auto; }
+  .review__user-name {
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: .4rem; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3); }
+  .review__user-rating {
+    font-size: 2.3rem;
+    color: var(--color-primary);
+    font-weight: 100; }
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #fff;
+  -webkit-perspective: 1000;
+  -webkit-backface-visibility: hidden; }
+  .cta__heading {
+    font-size: 2.2rem;
+    margin-bottom: 2.5rem;
+    font-weight: 200; }
+
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  border-bottom: 1px solid currentColor;
+  background-color: transparent;
+  outline: none;
+  padding-bottom: 2px;
+  font-size: inherit;
+  cursor: pointer;
+  transition: all .2s;
+  display: inline-block; }
+  .btn-inline span {
+    margin-left: 3px;
+    transition: margin-left .2s; }
+  .btn-inline:hover span {
+    margin-left: 8px; }
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  border: none;
+  border-radius: 100px;
+  text-transform: uppercase;
+  color: #fff;
+  cursor: pointer;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  position: relative;
+  overflow: hidden;
+  animation: pulse 1s infinite; }
+  .btn:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    animation: none; }
+  .btn > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all .2s; }
+  .btn__visible {
+    padding: 2rem 8rem; }
+  .btn__invisible {
+    padding: 2rem 0;
+    position: absolute;
+    top: -100%;
+    left: 0; }
+  .btn:hover .btn__visible {
+    transform: translateY(100%); }
+  .btn:hover .btn__invisible {
+    top: 0; }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -329,14 +413,16 @@ body {
   display: flex;
   background-color: var(--color-grey-light-1);
   padding: 4.5rem;
-  border-bottom: var(--line); }
+  border-bottom: var(--line);
+  font-size: 1.4rem; }
   .hotel-details .hotel-description {
     flex: 0 0 60%;
     margin-right: 4.5rem;
     background-color: #fff;
-    font-size: 1.4rem;
     padding: 3rem;
     box-shadow: var(--shadow-light); }
   .hotel-details .hotel-reviews {
     flex: 1;
-    background-color: yellowgreen; }
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
