--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,9 +1,11 @@
+///////////////
 //// LOGO ////
 .logo {
   height: 3.25rem;
   margin-left: 2rem;
 }
 
+/////////////////
 //// SEARCH ////
 .search {
   -webkit-box-flex: 0;
@@ -78,6 +80,7 @@
   }
 }
 
+/////////////////////////
 //// USER NAVIGATION ////
 .user-nav {
   align-self: stretch;
@@ -131,6 +134,7 @@
   }
 }
 
+//////////////////////////
 //// SIDE NAVIGATION ////
 .side-nav {
   font-size: 1.4rem;
@@ -192,6 +196,7 @@
   }
 }
 
+/////////////////////
 //// LEGAL TEXT ////
 .legal {
   font-size: 1.2rem;
@@ -200,6 +205,7 @@
   text-align: center;
 }
 
+//////////////////
 //// GALLERY ////
 .gallery {
   display: flex;
@@ -210,6 +216,7 @@
   }
 }
 
+//////////////////
 //// GALLERY ////
 .overview {
   display: flex;
@@ -272,53 +279,13 @@
 
 }
 
-//// BUTTONS ////
-.btn-inline {
-  border: none;
-  color: var(--color-primary);
-  border-bottom: 1px solid currentColor;
-  background-color: transparent;
-  outline: none;
-  padding-bottom: 2px;
-  font-size: inherit;
-  cursor: pointer;
-  transition: all .2s;
-  display: inline-block;
-  //backface-visibility: hidden;
-  /*&:hover {
-    color: var(--color-grey-dark-1);
-  }*/
-
-  /*&:focus {
-    outline: none;
-    animation: pulse 1s infinite;
-    backface-visibility: hidden;
-  }*/
-}
-
-//// ANIMATIONS ////
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-    box-shadow: none;
-  }
-
-  50% {
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
-  }
-
-  100% {
-    transform: scale(1);
-    box-shadow: none;
-  }
-}
-
+////////////////////
 //// PARAGRAPH ////
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem;
 }
 
+//////////////////////
 //// LIST ////
 .list {
   list-style: none;
@@ -347,7 +314,7 @@
       //background-image: url(../img/chevron-thin-right.svg);
       //background-size: cover;
 
-      // Drugi rozwiązanie to implementacja 8 SVG icons w strukturze HTML
+      // Drugie rozwiązanie to implementacja 8 SVG icons w strukturze HTML
       
       // Trzecie rozwiązanie to zastosowanie CSS'owych masek
       background-color: var(--color-primary);
@@ -359,6 +326,7 @@
   }
 }
 
+////////////////////
 //// RECOMMEND ////
 .recommend {
   font-size: 1.3rem;
@@ -380,5 +348,174 @@
     &:not(:last-child) {
       margin-right: -2rem;
     }
+  }
+}
+
+//////////////////////
+//// USER REVIEWS ////
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3rem;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.5rem;
+    left: -1rem;
+    color: var(--color-grey-light-1);
+    font-size: 20rem;
+    font-family: sans-serif;
+    line-height: 1;
+  }
+
+  &__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 10;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: .4rem;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__user-rating {
+    font-size: 2.3rem;
+    color: var(--color-primary);
+    font-weight: 100;
+  }
+}
+
+////////////////////////
+//// CALL-TO-ACTION ///
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #fff;
+  //obie poniższe właściowści rozwiązują buga z ruszającym się tekstem
+  -webkit-perspective: 1000; //
+  -webkit-backface-visibility: hidden; 
+
+  &__heading {
+    font-size: 2.2rem;
+    margin-bottom: 2.5rem;
+    font-weight: 200;
+  }
+}
+
+//////////////////
+//// BUTTONS ////
+.btn-inline {
+  border: none;
+  color: var(--color-primary);
+  border-bottom: 1px solid currentColor;
+  background-color: transparent;
+  outline: none;
+  padding-bottom: 2px;
+  font-size: inherit;
+  cursor: pointer;
+  transition: all .2s;
+  display: inline-block;
+
+  & span {
+    margin-left: 3px;
+    transition: margin-left .2s;
+  }
+
+  &:hover span {
+    margin-left: 8px;
+  }
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  border: none;
+  border-radius: 100px;
+  text-transform: uppercase;
+  color: #fff;
+  cursor: pointer;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  position: relative;
+  overflow: hidden;
+  animation: pulse 1s infinite;
+
+  &:hover {
+    background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    animation: none;
+  }
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all .2s;
+  }
+
+  &__visible {
+    padding: 2rem 8rem;
+  }
+
+  &__invisible {
+    padding: 2rem 0;
+    position: absolute;
+    top: -100%;
+    left: 0;
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+}
+
+/////////////////////
+//// ANIMATIONS ////
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+
+  50% {
+    transform: scale(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+
+  100% {
+    transform: scale(1);
+    box-shadow: none;
   }
 }
