--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -53,6 +56,13 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
+  @media only screen and (max-width: 31.25em) {
+    .search {
+      order: 1;
+      flex: 0 0 100%;
+      background-color: var(--color-grey-light-2); }
+      .search:focus {
+        background-color: var(--color-grey-light-2); } }
   .search__input {
     font-family: inherit;
     font-size: inherit;
@@ -65,6 +75,9 @@ body {
     -webkit-transition: all .3s;
     transition: all .3s;
     margin-right: -3.25rem; }
+    @media only screen and (max-width: 31.25em) {
+      .search__input {
+        margin-right: 0; } }
     .search__input:focus {
       width: 100%;
       background-color: var(--color-grey-light-3);
@@ -83,6 +96,11 @@ body {
   .search__button {
     border: none;
     background-color: var(--color-grey-light-2); }
+    @media only screen and (max-width: 31.25em) {
+      .search__button {
+        -webkit-transform: translateY(2px);
+        transform: translateY(2px);
+        padding-right: 1rem; } }
     .search__button:focus {
       outline: none; }
     .search__button:active {
@@ -133,10 +151,23 @@ body {
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3rem; }
+  @media only screen and (max-width: 56.25em) {
+    .side-nav {
+      margin: 0;
+      display: flex; } }
+  @media only screen and (max-width: 28.15em) {
+    .side-nav {
+      font-size: 1.2rem; } }
   .side-nav__item {
     position: relative; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__item {
+        flex: 1; } }
     .side-nav__item:not(:last-child) {
       margin-bottom: .5rem; }
+      @media only screen and (max-width: 56.25em) {
+        .side-nav__item:not(:last-child) {
+          margin: 0; } }
   .side-nav__item::before {
     content: "";
     position: absolute;
@@ -162,18 +193,34 @@ body {
     position: relative;
     display: flex;
     align-items: center; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        justify-content: center;
+        padding: 1.5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        flex-direction: column;
+        align-items: center; } }
   .side-nav__icon {
     height: 1.75rem;
     width: 1.75rem;
     color: var(--color-grey-light-1);
     margin-right: 2rem;
     fill: currentColor; }
+    @media only screen and (max-width: 37.5em) {
+      .side-nav__icon {
+        height: 1.5rem;
+        width: 1.5rem;
+        margin: .3rem; } }
 
 .legal {
   font-size: 1.2rem;
   padding: 2rem;
   color: var(--color-grey-light-4);
   text-align: center; }
+  @media only screen and (max-width: 56.25em) {
+    .legal {
+      display: none; } }
 
 .gallery {
   display: flex; }
@@ -186,15 +233,32 @@ body {
   align-items: center;
   border-bottom: var(--line);
   background-color: #fff; }
+  @media only screen and (max-width: 28.15em) {
+    .overview {
+      flex-wrap: wrap;
+      padding: 0 3rem;
+      justify-content: space-between; } }
   .overview__heading {
     font-size: 2.25rem;
     font-weight: 300;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__heading {
+        font-size: 1.8rem;
+        padding: 1.25rem 2rem; } }
+    @media only screen and (max-width: 28.15em) {
+      .overview__heading {
+        flex: 1 0 100%;
+        text-align: center;
+        font-size: 3rem; } }
   .overview__stars {
     margin-right: auto;
     display: flex; }
+    @media only screen and (max-width: 28.15em) {
+      .overview__stars {
+        margin: 0; } }
   .overview__icon {
     height: 1.75rem;
     width: 1.75rem;
@@ -214,12 +278,21 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating {
+        padding: 0 1.25rem; } }
   .overview__rating-average {
     font-size: 2.25rem;
     font-weight: 300; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating-average {
+        font-size: 1.8rem; } }
   .overview__rating-count {
     font-size: .8rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 37.5em) {
+      .overview__rating-count {
+        font-size: .6rem; } }
 
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem; }
@@ -232,8 +305,16 @@ body {
   border-top: var(--line);
   display: flex;
   flex-wrap: wrap; }
+  @media only screen and (max-width: 28.15em) {
+    .list {
+      flex-direction: column;
+      padding: 1rem 0;
+      margin: 1rem 0; } }
   .list__item {
     flex: 0 0 50%; }
+    @media only screen and (max-width: 28.15em) {
+      .list__item {
+        margin-bottom: 1rem; } }
     .list__item:nth-child(-n+6) {
       margin-bottom: 1rem; }
     .list__item::before {
@@ -255,6 +336,8 @@ body {
   align-items: center; }
   .recommend__number {
     margin-right: auto; }
+  .recommend__friends {
+    display: flex; }
   .recommend__photo {
     box-sizing: content-box;
     height: 4rem;
@@ -270,7 +353,12 @@ body {
   padding: 3rem;
   margin-bottom: 3rem;
   position: relative;
-  overflow: hidden; }
+  overflow: hidden;
+  width: 100%; }
+  @media only screen and (max-width: 56.25em) {
+    .review {
+      padding: 2rem;
+      margin-bottom: 2rem; } }
   .review::before {
     content: "\201C";
     position: absolute;
@@ -314,10 +402,19 @@ body {
   background-color: #fff;
   -webkit-perspective: 1000;
   -webkit-backface-visibility: hidden; }
+  @media only screen and (max-width: 56.25em) {
+    .cta {
+      padding: 2.5rem 0; } }
+  @media only screen and (max-width: 37.5em) {
+    .cta {
+      padding: 2.5rem 2rem; } }
   .cta__heading {
     font-size: 2.2rem;
     margin-bottom: 2.5rem;
     font-weight: 200; }
+    @media only screen and (max-width: 56.25em) {
+      .cta__heading {
+        font-size: 1.8rem; } }
 
 .btn-inline {
   border: none;
@@ -385,6 +482,10 @@ body {
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   min-height: 50rem; }
+  @media only screen and (max-width: 81.25em) {
+    .container {
+      margin: 0;
+      max-width: 100%; } }
 
 .header {
   font-size: 1.4rem;
@@ -394,9 +495,17 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .header {
+      flex-wrap: wrap;
+      height: 12rem;
+      align-content: space-around; } }
 
 .content {
   display: flex; }
+  @media only screen and (max-width: 56.25em) {
+    .content {
+      flex-direction: column; } }
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
@@ -415,14 +524,48 @@ body {
   padding: 4.5rem;
   border-bottom: var(--line);
   font-size: 1.4rem; }
+  @media only screen and (max-width: 56.25em) {
+    .hotel-details {
+      padding: 2rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .hotel-details {
+      flex-direction: column;
+      padding: 3rem; } }
+  @media only screen and (max-width: 28.15em) {
+    .hotel-details {
+      padding: 1rem; } }
   .hotel-details .hotel-description {
     flex: 0 0 60%;
     margin-right: 4.5rem;
     background-color: #fff;
     padding: 3rem;
     box-shadow: var(--shadow-light); }
+    @media only screen and (max-width: 56.25em) {
+      .hotel-details .hotel-description {
+        margin-right: 2rem;
+        padding: 1.5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .hotel-details .hotel-description {
+        margin-bottom: 3rem;
+        margin-right: 0;
+        padding: 3rem; } }
+    @media only screen and (max-width: 28.15em) {
+      .hotel-details .hotel-description {
+        margin-bottom: 2rem;
+        padding: 2rem; } }
   .hotel-details .hotel-reviews {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center; }
+    .hotel-details .hotel-reviews__heading {
+      display: none;
+      margin-bottom: 2rem;
+      color: var(--color-primary);
+      font-size: 1.9rem;
+      text-transform: uppercase;
+      font-weight: 300;
+      letter-spacing: 1px; }
+      @media only screen and (max-width: 37.5em) {
+        .hotel-details .hotel-reviews__heading {
+          display: block; } }
