--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,15 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+////////////////
+///// RWD /////
+$bp-largest: 81.25em; // 1300px/16px = 81,25
+$bp-large: 68.75em;  // 1100
+$bp-medium: 56.25em;  // 900
+$bp-small: 37.5em;  // 600
+$bp-smallest: 31.25em;  // 500
+$bp-mini: 28.15em;  // 450
+
 * {
   margin: 0;
   padding: 0;
@@ -32,6 +41,10 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem = 10px, 10px/16px(default) = 62.5%
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%; // 8px/16px = 50%
+  }
 }
 
 body {
