--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,8 +3,12 @@
   margin: 8rem auto;
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
-  
   min-height: 50rem;
+  
+  @media only screen and (max-width: $bp-largest) {
+    margin: 0;
+    max-width: 100%;
+  }
 }
 
 .header {
@@ -16,10 +20,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: $bp-smallest) {
+    flex-wrap: wrap;
+    height: 12rem;
+    align-content: space-around; 
+  }
 }
 
 .content {
   display: flex;
+
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -43,19 +57,61 @@
   border-bottom: var(--line);
   font-size: 1.4rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+    padding: 3rem;
+  }
+
+  @media only screen and (max-width: $bp-mini) {
+    padding: 1rem;
+  }
+
   .hotel-description {
     flex: 0 0 60%;
     margin-right: 4.5rem;
     background-color: #fff;
     padding: 3rem;
     box-shadow: var(--shadow-light);
+
+    @media only screen and (max-width: $bp-medium) {
+      margin-right: 2rem;
+      padding: 1.5rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      margin-bottom: 3rem;
+      margin-right: 0;
+      padding: 3rem;
+    }
+
+    @media only screen and (max-width: $bp-mini) {
+      margin-bottom: 2rem;
+      padding: 2rem;
+    }
   }
 
   .hotel-reviews {
     flex: 1;
-
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__heading {
+      display: none;
+      margin-bottom: 2rem;
+      color: var(--color-primary);
+      font-size: 1.9rem;
+      text-transform: uppercase;
+      font-weight: 300;
+      letter-spacing: 1px;
+
+      @media only screen and (max-width: $bp-small) {
+        display: block;
+      }
+    }
   }
 }
